[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true

[tool.pdm]
includes = ["src"]
[tool.pdm.dev-dependencies]
dev = [
    "yapf>=0.32.0",
    "isort>=5.11.4",
    "ruff>=0.0.228",
    "mypy>=0.991",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "setuptools-git-versioning>=1.13.1",
    "pylint>=2.15.10",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}+{sha}"
dirty_template = "{tag}.post{ccount}+{sha}.dirty"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report xml:coverage.xml --cov-report term-missing"
testpaths = [
  "tests",
]

[tool.coverage.paths]
source = [
  "src/yolov3",
]

[tool.coverage.run]
branch = true
omit = [
  "src/yolov3/proto/*",
]
source = [
  "src/yolov3"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
  # ignore pass and ...
  "pass",
  # "...",
]

[tool.mypy]
files = [
    'src/yolov3',
]
python_version = "3.10"
ignore_missing_imports = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
force_single_line = true

[project.scripts]
yolov3 = "yolov3.cli:cli"

[project]
name = "tf-yolo"
version = "0"
description = "YOLOv3 Implemented with TensorFlow"
authors = [
    {name = "ZHANG Meng", email = "stall-breezes.0t@icloud.com"},
]
dependencies = [
    "tensorflow-macos>=2.10.0",
    "tensorflow-metal>=0.7.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
homepage = "https://github.com/ppmzhang2/tf-yolo"

[project.optional-dependencies]
ipy = [
    "ipython>=8.7.0",
]
